# firma

./: .gitignore  .travis.yml  Cargo.toml  README.md  grcov-local.sh  psbt-from-bdk.md  release-steps.md  verify-signature.md
.github/actions-rs/: grcov.yml
.github/workflows/: android.yml  audit.yml  rust.yml  test.yml
android/: README.md  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/it/casatta/: Common.kt  ExampleInstrumentedTest.kt  InstrumentedTest.kt  KeyTest.kt  SignTest.kt  TransactionTest.kt  WalletTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/it/casatta/: AddressActivity.kt  C.kt  ContextActivity.kt  DescItemAdapter.kt  EncryptionKey.kt  FirmaApplication.kt  KeyActivity.kt  ListActivity.kt  MainActivity.kt  PSBTActivity.kt  QrActivity.kt  Rust.kt  WalletActivity.kt
android/app/src/main/java/it/casatta/json/: Data.kt  Options.kt
android/app/src/main/res/layout/: activity_address.xml  activity_key.xml  activity_list.xml  activity_main.xml  activity_psbt.xml  activity_qr.xml  activity_wallet.xml  desc_item.xml  image_item.xml  key_item.xml  txinout_item.xml
android/app/src/main/res/menu/: menu_key.xml
android/app/src/main/res/values/: strings.xml
android/app/src/networkMainnet/java/it/casatta/: Network.kt
android/app/src/networkMainnet/res/values/: colors.xml  strings.xml
android/app/src/networkRegtest/java/it/casatta/: Network.kt
android/app/src/networkRegtest/res/values/: strings.xml
android/app/src/networkSignet/java/it/casatta/: Network.kt
android/app/src/networkSignet/res/values/: strings.xml
android/app/src/networkTestnet/java/it/casatta/: Network.kt
android/app/src/networkTestnet/res/values/: strings.xml
android/app/src/test/java/it/casatta/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
cli/: Cargo.toml  README.md
cli/src/offline/: main.rs
cli/src/online/: main.rs
cli/tests/: bitcoind.rs  integration.rs
docs/: datadir.dot  datadir.md  release-steps.md  verify-signature.md
lib/: .envrc  Cargo.toml  LICENSE  README.md  build-android-arm32.sh  build-android-release.sh  build-android.sh  cargo-config.toml
lib/build-android/: aarch64-linux-android.sh  all.sh  arm64-v8a.sh  armv7-linux-androideabi.sh  armv7a.sh  common.sh  i686-linux-android.sh  x86.sh  x86_64-linux-android.sh  x86_64.sh
lib/src/: lib.rs
lib/src/android/: mod.rs
lib/src/common/: bmp.rs  cmd.rs  context.rs  error.rs  file.rs  import.rs  import_export.rs  json.rs  list.rs  mnemonic.rs  mod.rs  qr.rs
lib/src/common/json/: identifier.rs  mod.rs
lib/src/entities/: identifier.rs  mod.rs  persisted.rs
lib/src/offline/: decrypt.rs  derive_key.rs  descriptor.rs  dice.rs  import_wallet.rs  mod.rs  print.rs  random.rs  restore.rs  sign.rs  sign_wallet.rs
lib/src/online/: balance.rs  create_tx.rs  create_wallet.rs  get_address.rs  list_coins.rs  mod.rs  rescan.rs  send_tx.rs
lib/test_data/dice/: master_key  master_key_2  priv1.key  priv2.key
lib/test_data/sign/: psbt_bip.json  psbt_bip.key  psbt_bip.signed.json  psbt_testnet.1.key  psbt_testnet.1.signed.json  psbt_testnet.2.key  psbt_testnet.2.signed.json  psbt_testnet.json  psbt_testnet.signed.json
src/: error.rs  lib.rs  main.rs
src/common/: cmd.rs  error.rs  json.rs  mod.rs
src/dice/: main.rs
src/firma/: main.rs  sign.rs
src/offline/: derive_key.rs  dice.rs  main.rs  print.rs  qr.rs  random.rs  restore.rs  sign.rs
src/online/: balance.rs  create_tx.rs  create_wallet.rs  get_address.rs  list_coins.rs  list_wallets.rs  main.rs  rescan.rs  send_tx.rs
src/qr/: main.rs
test_data/dice/: master_key  master_key_2  priv1.key  priv2.key
test_data/sign/: psbt_bip.json  psbt_bip.key  psbt_bip.signed.json  psbt_testnet.1.key  psbt_testnet.1.signed.json  psbt_testnet.2.key  psbt_testnet.2.signed.json  psbt_testnet.json  psbt_testnet.signed.json
tests/: integration.rs
