[package]
name = "firma"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
default-run = "firma"

[dependencies]
hex = "0.4.0"
bech32 = "0.7.1"
bitcoin = "0.21.0"
bitcoin_hashes = "0.7.1"
secp256k1 = "0.15.5"
base64 = "0.11.0"
num-bigint = "0.2.3"
qrcode = "0.11.0"
structopt = "0.3.3"
log = "0.4.8"
serde = { version = "=1.0.102", features = [ "derive" ] }
serde_json = "1.0.41"

[dev-dependencies]
miniscript = "0.11.0"

[[bin]]
name = "firma"
path = "src/firma/main.rs"

[[bin]]
name = "dice"
path = "src/dice/main.rs"

[[bin]]
name = "qr"
path = "src/qr/main.rs"

[profile.release]
lto = true
