[package]
name = "firma"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"

[dependencies]
hex = "0.4.0"
bech32 = "0.7.1"
bitcoin = "0.23.0"
bitcoincore-rpc = "0.9.1"
base64 = "0.11.0"
num-bigint = "0.2.3"
qrcode = "0.11.0"
structopt = "0.3.3"
log = "0.4.8"
serde = { version = "=1.0.102", features = [ "derive" ] }
serde_json = "1.0.41"
dirs = "2.0.2"
rand = "0.7.3"

[dev-dependencies]
miniscript = "0.11.0"

[[bin]]
name = "firma-online"
path = "src/online/main.rs"

[[bin]]
name = "firma-offline"
path = "src/offline/main.rs"

[profile.release]
lto = true
