[package]
name = "firma-cli"
version = "0.14.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/RCasatta/firma/tree/master/cli"
repository = "https://github.com/RCasatta/firma/tree/master/cli"
documentation = "https://docs.rs/firma-cli/"
description = "firma-cli is a command line interface tool to create bitcoin multisig wallets with private keys stored on offline devices."
keywords = ["sign", "bitcoin", "cold", "offline", "cli"]

[dependencies]
firma = "0.14.0"
bitcoincore-rpc = "0.12.0"
bitcoin = { version = "0.25.0", features = [ "use-serde" ] }
serde = { version = "1.0.105", features = [ "derive" ] }
serde_json = "1.0.48"
structopt = "0.3.12"
log = "0.4.8"

[[bin]]
name = "firma-online"
path = "src/online/main.rs"

[[bin]]
name = "firma-offline"
path = "src/offline/main.rs"

[dev-dependencies]
tempdir = "0.3"
rand = "0.7.3"
remove_dir_all = "=0.5.2" # pinning to 0.5.2 otherwise MSRV 1.38.0 not supported
