[package]
name = "firma-cli"
version = "0.20.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/RCasatta/firma/tree/master/cli"
repository = "https://github.com/RCasatta/firma/tree/master/cli"
documentation = "https://docs.rs/firma-cli/"
description = "firma-cli is a command line interface tool to create bitcoin multisig wallets with private keys stored on offline devices."
keywords = ["sign", "bitcoin", "cold", "offline", "cli"]

[dependencies]
firma = "0.20.0"
# firma = { path = "../lib" }
structopt = "0.3.20"

[[bin]]
name = "firma-online"
path = "src/online/main.rs"

[[bin]]
name = "firma-offline"
path = "src/offline/main.rs"

[dev-dependencies]
assert_matches = "1.5.0"
tempfile = "3.1.0"
rand = "0.7.3"
bitcoind = { version = "0.16.0", features = ["0_21_1"] }
