[package]
name = "firma"
version = "0.13.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"

[dependencies]
hex = "0.3.2"
bitcoin = { version = "0.25.0", features = [ "use-serde" ] }
bitcoincore-rpc = "0.12.0"
base64 = "0.9.3"
num-bigint = "0.2.6"
qr_code = { version= "0.5.0", features = ["bmp"] }
structopt = "0.3.12"
log = "0.4.8"
serde = { version = "1.0.105", features = [ "derive" ] }
serde_json = "1.0.48"
dirs = "2.0.2"
rand = "0.7.3"
miniscript = "3.0.0"
regex = "1"

[dev-dependencies]
tempdir = "0.3"
flate2 = "1.0"
serde_cbor = "0.11.1"
remove_dir_all = "=0.5.2" # pinning to 0.5.2 otherwise MSRV 1.38.0 not supported

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.16", default-features = false }
android_logger = "0.8"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
