[package]
name = "firma"
version = "0.14.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/RCasatta/firma"
repository = "https://github.com/RCasatta/firma"
documentation = "https://docs.rs/firma/"
description = "Firma is a library to create bitcoin multisig wallets with private keys stored on offline devices."
keywords = ["sign", "bitcoin", "cold", "offline"]

[dependencies]
hex = "0.4.2"
bitcoin = { version = "0.25.0", features = [ "use-serde" ] }
bitcoincore-rpc = "0.12.0"
base64 = "0.13.0"
num-bigint = "0.3.0"
qr_code = { version= "0.17.0", features = ["bmp"] }
structopt = "0.3.20"
log = "0.4.11"
serde = { version = "1.0.117", features = [ "derive" ] }
serde_json = "1.0.59"
dirs = "3.0.1"
rand = "0.7.3"
miniscript = "3.0.0"

[dev-dependencies]
tempdir = "0.3"
flate2 = "1.0"
serde_cbor = "0.11.1"
remove_dir_all = "=0.5.2" # pinning to 0.5.2 otherwise MSRV 1.38.0 not supported

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.16", default-features = false }
android_logger = "0.8"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
