[package]
name = "firma"
version = "0.20.0-dev"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/RCasatta/firma"
repository = "https://github.com/RCasatta/firma"
documentation = "https://docs.rs/firma/"
description = "Firma is a library to create bitcoin multisig wallets with private keys stored on offline devices."
keywords = ["sign", "bitcoin", "cold", "offline"]

[dependencies]
hex = "0.4.2"
bitcoin = { version = "0.25.2", features = [ "use-serde", "secp-recovery" ] }
bitcoincore-rpc = "0.12.0"
base64 = "0.13.0"
num-bigint = "0.3.1"
qr_code = { version= "1.1.0", features = ["bmp"] }
structopt = "0.3.20" # can't rexport https://github.com/TeXitoi/structopt/issues/339
log = "0.4.11"
serde = { version = "1.0.117", features = [ "derive" ] }
serde_json = "1.0.59"
dirs-next = "2.0.0"
rand = "0.7.3"
miniscript = "4.0"
aes-gcm-siv = "0.9.0"

[dev-dependencies]
tempfile = "3.1.0"
flate2 = "1.0"
serde_cbor = "0.11.1"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.16", default-features = false }
android_logger = "0.8"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
